--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.4.11",
     "@astrojs/check": "^0.5.6",
+    "astro": "^4.4.11",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "unocss": "^0.58.5"
   }
 }
