--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.6",
+    "@astrojs/vercel": "^7.3.4",
     "@unocss/reset": "^0.58.5",
     "astro": "^4.4.11",
     "typescript": "^5.3.3"
