--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/vercel": "^7.3.4",
     "@unocss/reset": "^0.58.5",
     "astro": "^4.4.11",
+    "sharp": "^0.33.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
