--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
       "@pages/*": ["src/pages/*"],
       "@utils/*": ["src/utils/*"],
       "@data/*": ["src/data/*"],
+      "@i18n/*": ["src/i18n/*"]
     }
   }
 }
