chore: upgrade biome

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "check": "pnpm dlx @biomejs/biome check --apply ./src",
+    "check": "pnpm dlx @biomejs/biome check --write ./src",
+    "biome:upgrade": "pnpm dlx @biomejs/biome migrate",
     "astro:upgrade": "pnpm dlx @astrojs/upgrade"
   },
   "dependencies": {
@@ -23,7 +24,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.6.0",
+    "@biomejs/biome": "1.8.2",
     "unocss": "^0.61.0"
   },
   "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
