--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.6.0/schema.json",
+	"$schema": "https://biomejs.dev/schemas/1.8.2/schema.json",
 	"organizeImports": {
 		"enabled": true
 	},
@@ -24,7 +24,7 @@
 			"enabled": true,
 			"quoteStyle": "single",
 			"jsxQuoteStyle": "single",
-			"trailingComma": "all",
+			"trailingCommas": "all",
 			"semicolons": "asNeeded",
 			"arrowParentheses": "asNeeded",
 			"attributePosition": "multiline"
