--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "astro preview",
     "astro": "astro",
     "check": "pnpm dlx @biomejs/biome check --write ./src",
-    "biome:upgrade": "pnpm dlx @biomejs/biome migrate",
+    "biome:upgrade": "pnpm dlx @biomejs/biome migrate --write",
     "astro:upgrade": "pnpm dlx @astrojs/upgrade"
   },
   "dependencies": {
@@ -17,14 +17,14 @@
     "@astrojs/mdx": "^3.1.2",
     "@astrojs/vercel": "^7.7.2",
     "@unocss/reset": "^0.61.0",
-    "astro": "^4.11.1",
+    "astro": "^4.11.5",
     "rehype-pretty-code": "^0.13.2",
     "sharp": "^0.33.4",
     "shiki": "^1.9.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.8.2",
+    "@biomejs/biome": "1.8.3",
     "unocss": "^0.61.0"
   },
   "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
