--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/mdx": "^3.1.2",
+    "@astrojs/sitemap": "^3.1.6",
     "@astrojs/vercel": "^7.7.2",
     "@unocss/reset": "^0.61.0",
     "astro": "^4.11.5",
