--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/mdx": "^3.1.2",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/vercel": "^7.7.2",
+    "@thewebforge/astro-og-images": "^3.0.0",
     "@unocss/reset": "^0.61.0",
     "astro": "^4.11.5",
     "rehype-pretty-code": "^0.13.2",
