--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@unocss/reset": "^0.61.0",
     "astro": "^4.11.5",
     "rehype-pretty-code": "^0.13.2",
+    "satori": "^0.10.14",
     "sharp": "^0.33.4",
     "shiki": "^1.9.1",
     "typescript": "^5.3.3"
