--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/vercel": "^7.7.2",
     "@unocss/reset": "^0.61.0",
+    "@vercel/analytics": "^1.3.1",
     "astro": "^4.11.5",
     "rehype-pretty-code": "^0.13.2",
     "satori": "^0.10.14",
