--- a/package.json
+++ b/package.json
@@ -10,26 +10,27 @@
     "astro": "astro",
     "check": "pnpm dlx @biomejs/biome check --write ./src",
     "biome:upgrade": "pnpm dlx @biomejs/biome migrate --write",
-    "astro:upgrade": "pnpm dlx @astrojs/upgrade"
+    "astro:upgrade": "pnpm dlx @astrojs/upgrade",
+    "check:deps": "pnpm update --interactive"
   },
   "dependencies": {
-    "@astrojs/check": "^0.8.0",
-    "@astrojs/mdx": "^3.1.2",
-    "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/vercel": "^7.7.2",
-    "@unocss/reset": "^0.61.0",
-    "@vercel/analytics": "^1.3.1",
-    "astro": "^4.11.5",
-    "rehype-pretty-code": "^0.13.2",
-    "satori": "^0.10.14",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^3.1.9",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/vercel": "^7.8.2",
+    "@unocss/reset": "^0.61.9",
+    "@vercel/analytics": "^1.3.2",
+    "astro": "^4.16.9",
+    "rehype-pretty-code": "^0.14.0",
+    "satori": "^0.11.3",
     "satori-html": "^0.3.2",
-    "sharp": "^0.33.4",
-    "shiki": "^1.9.1",
-    "typescript": "^5.3.3"
+    "sharp": "^0.33.5",
+    "shiki": "^1.22.2",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.8.3",
-    "unocss": "^0.61.0"
+    "@biomejs/biome": "1.9.4",
+    "unocss": "^0.63.6"
   },
   "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
